--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@xstate/svelte": "^3.0.3",
+		"xstate": "^5.13.1"
+	}
 }
